# RustPractice

./: Cargo.toml  README.md
src/: advfeatures.rs  collectionprograms.rs  concurrency.rs  functionalprogramming.rs  generictypes.rs  lib.rs  main.rs  practiceprograms.rs  quickpractice.rs  smartpointers.rs  tests.rs  traitobj.rs
src/tests/: integration_tests.rs
