[package]
name = "RustPractice"
version = "0.1.0"
authors = ["manjunath.malepati"]
edition = "2018"
cargo-features = ["named-profiles"]

#[profile.debug]
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
